--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ajr_190710057">
         <activity
-            android:name=".MobilActivity"
+            android:name=".RiwayatCustomerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="true" />
+        <activity
+            android:name=".PromoActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity3"
@@ -33,6 +39,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MobilActivity"
             android:exported="true" />
     </application>
 
