--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,10 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     // Gson
     implementation 'com.google.code.gson:gson:2.8.8'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 }
