--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,13 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ajr_190710057"
-        >
+        android:theme="@style/Theme.Ajr_190710057">
+        <activity
+            android:name=".RiwayatDriverActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ProfileDriverActivity"
+            android:exported="true" />
         <activity
             android:name=".RiwayatCustomerActivity"
             android:exported="true" />
